Fix console width to fit visible container

--- a/ui/css/floppyui.css
+++ b/ui/css/floppyui.css
@@ -52,7 +52,6 @@
 
 .consolePanel {
     overflow: hidden;
-    text-wrap: none;
     padding-bottom: .2em;
     font-family: monospace, Monospaced;
     font-size: .75vw; /* 80 col width so 80/100 in vw units then it fits regardless of container size. reduce to .75 to stop wrapping last char */
